--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body{
   background-color:rgb(253, 251, 251);
 }
+
+#cabecalho{
+  margin-top:0;
+  text-align: center;
+}
+
+#titulo{
+
+}
+
+#minha_foto{
+  width:150px;
+  border-radius: 2%;
+}
