--- a/style.css
+++ b/style.css
@@ -1,3 +1,18 @@
+* {
+    box-sizing:  border-box;
+    margin:  0;
+    padding:  0;
+}
+
 body {
     background-color: rgb(253, 251, 251);
 }
+
+.header {
+    background-color:rgb(47, 193, 140);
+    height:  100px;
+    position:  fixed;
+    top:  0;
+    width:  100%;
+}
+
