--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color:rgb(253, 251, 251);
+body {
+  background-color: rgb(253, 251, 251);
+}
+
+#cabecalho {
+  position: fixed;
+  top: 0;
+  border: 3px solid limegreen;
+  width: 100%;
 }
