--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+* {
+    border: 0;
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(253, 251, 251);
 }
@@ -5,4 +11,17 @@ body {
 header {
     position: fixed;
     top: 0;
+    border: 1px solid red;
+    width: 100%;
+    height: 100px;
+}
+
+main {
+    position: absolute;
+    top: 101px;
+    border: 1px solid green;
+}
+
+#minha_foto {
+    width: 300px;
 }
