--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: rgb(253, 251, 251);
 }
@@ -5,4 +10,8 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+}
+
+#minha_foto {
+  width: 250px;
 }
