--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-body {
-    background-color:rgb(253, 251, 251);
+  body {
+    background-color :rgb(253, 251, 251);
 }
-#titulo {
-    top: 0px;
+  
+  #titulo {
+    top: 0;
 }
 
