--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     position: fixed;
     top: 0;
     background-color: rgb(61, 64, 91);
-    width: 100%;    
+    width: 100%; 
+    height: 10%;   
 }
 
 h1 {
@@ -16,4 +17,6 @@ h1 {
 #minha_foto {
     height: 500px;
     top: 100px;
+    display: block;
 }
+
