--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 body{
     background-color: rgb(253,251,251);
 }
+#cabecalho{
+    position: fixed;
+    top: 0;
+    background-color: green;
+    width: 100%;
+}
+#titulo{
+    color: white;
+}
+
