add ordered list

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 h1 {
-  font: 700 sans-serif;
+  font: 700 32px sans-serif;
 }
 
 .text-center {
@@ -33,4 +33,8 @@ h1 {
 
 #minha_foto {
   width: 100px;
+}
+
+ol {
+  margin-left: 20px;
 }
