--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
 header {
-    position: fixed;
-    top: 0;
+  position: fixed;
+  top: 0;
+}
+
+#minha_foto {
+  margin-top: 60px;
+  width: 370px;
 }
