--- a/style.css
+++ b/style.css
@@ -8,17 +8,31 @@ body {
 }
 
 .cabecalho {
-  position: fixed;
   top: 0;
+  background-color: darkslategrey;
 }
 
 .titulo {
+  position: fixed;
   text-align: center;
+  display: inline;
+  width: 100%;
+  padding: 30px;
+  background-color: rgb(6, 73, 6);
+  color: white;
+}
+
+.cabecalho ul li {
   display: inline-block;
-  padding: 5px;
+  text-align: right;
+  width: 100%;
+  padding: 10px;
+  color: white;
+  margin-top: 30px;
 }
 
 .minha_foto {
-  display: block;
+  float: left;
   width: 33%;
+  padding: 50px;
 }
