--- a/style.css
+++ b/style.css
@@ -1,16 +1,27 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
+
 #cabecalho {
-    top: 0px;
-    background-color: aquamarine
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  top: 0px;
+  left: 0px;
+  background-color: rgb(122, 241, 202);
+  text-align: center;
 }
+
 .head {
-    border-style: solid;
-    border-width: 0px;
-    display: inline;
-}
-#minha_foto {
+  border-style: solid;
+  border-width: 0px;
   display: inline;
+}
+
+main {
+  padding-top: 70px;
+}
+
+#minha_foto {
   width: 15%;
 }
