--- a/style.css
+++ b/style.css
@@ -20,3 +20,16 @@ h1 {
     display: block;
 }
 
+
+#rodape {
+    position: fixed;
+    bottom: 0;
+    background-color: rgb(61, 64, 91);
+    width: 100%; 
+    height: 5%;   
+    color: rgb(244, 241, 222);
+}
+
+#link-externo {
+    color: rgb(244, 241, 222);
+}
