--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
 body{
     background-color: rgb(238, 234, 213);
 }
+
+#cabecalho{
+    background-color: rgb(22, 21, 19);
+    text-align: center;
+    position: fixed=0;
+    height: 50px;
+}
+
+#titulo{
+    color: rgb(230, 228, 219);
+    text-align: center;
+}
