--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
   body {
-    background-color :rgb(253, 251, 251);
+    background-color: rgb(253, 251, 251);
 }
-  
-  #titulo {
+
+  #cabecalho {
     top: 0;
 }
 
