--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
 
 body {
     background-color: rgb(253, 251, 251);
@@ -17,5 +13,13 @@ body {
 }
 
 #minha_foto{
-    
+
+}
+
+#licoes_aprendidas {
+
+}
+
+#rodape{
+
 }
