--- a/style.css
+++ b/style.css
@@ -1,30 +1,36 @@
-body{
-  background-color:rgb(253, 251, 251);
+body {
+  background-color: rgb(253, 251, 251);
 }
 
-#cabecalho{
-  height:70px;
+#cabecalho {
+  height: 70px;
   background-color: rgb(106, 253, 106);
-  margin-top:0;
+  margin-top: 0;
   text-align: center;
 }
 
-#titulo{
-  margin-top:0;
+#titulo {
+  margin-top: 0;
 }
 
-#minha_foto{
-  margin-top:10px;
-  width:150px;
+#minha_foto {
+  margin-top: 10px;
+  width: 150px;
   border-radius: 2%;
 }
 
-ol, ul{
+ol , ul {
   display: inline-block;
 }
 
-article, aside{
-  margin-left:50px;
+.lado-esquerdo , .lado-direito {
   display: inline-block;
-  width:30%;
+  width: 45%;
+  padding: 2%;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+footer {
+  text-align: center;
 }
