--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    
+
     --background_color: rgb(253, 251, 251);
 
     --primary_color: rgb(94, 18, 248);
@@ -13,4 +13,74 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+
+.button {
+    background: var(--tertiary_color);
+    border: 2px solid transparent;
+    border-radius: 25px;
+    padding: 5px 25px;
+}
+
+.button:hover {
+    border: 2px solid var(--secondary_color);
+}
+
+.center_all {
+    align-items: center;
+    justify-content: center;
+}
+
+.center_horizontal {
+    justify-content: center;
+}
+
+.center_vertical {
+    align-items: center;
+}
+
+#cabecalho {
+    background-color: var(--primary_color);
+    position: sticky;
+    top: 0;
+}
+
+#cabecalho div {
+    justify-content: space-between;
+}
+
+.container {
+    margin: 0 8rem;
+}
+
+.d_flex {
+    display: flex;
+}
+
+.navbar {
+    padding: 2rem 0;
+}
+
+.navbar_header {
+    font-size: 20px;
+}
+
+.navbar ul {
+    display: flex;
+    list-style: none;
+}
+
+.navbar ul li {
+    margin: 0 0.3rem;
+}
+
+.no_decoration {
+    list-style: none;
+    text-decoration: none;
+}
+
+#titulo {
+    color: var(--secondary_color);
+    font-size: 3rem;
+    padding-right: 1rem;
 }
