--- a/style.css
+++ b/style.css
@@ -41,8 +41,9 @@
 
 #cabecalho {
     background-color: var(--primary_color);
-    position: sticky;
+    position: fixed;
     top: 0;
+    width: 100%;
 }
 
 #cabecalho div {
