--- a/style.css
+++ b/style.css
@@ -6,3 +6,16 @@ body{
     position: fixed;
     top: 0;
 }
+
+#minha_foto{
+    width:  300px;
+    display: block;
+    position: relative;
+    top: 80px;
+}
+
+#section_1{
+    display: block;
+    position: relative;
+    top: 100px;
+}
