--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-/* Adicione uma cor de fundo específica para a página */
+/* 1. Adicione uma cor de fundo específica para a página */
 body {
   background-color: rgb(253, 251, 251);
 }
+
 /* 2. Adicione uma barra superior com um título */
 #cabecalho {
-  position:fixed;
-  top: 0; 
+  position: fixed;
+  top: 0;
 }
