--- a/style.css
+++ b/style.css
@@ -1,13 +1,24 @@
-body{
-    background-color: rgb(253,251,251);
+body {
+    background-color: rgb(253, 251, 251);
 }
-#cabecalho{
+
+
+#cabecalho {
     position: fixed;
     top: 0;
     background-color: green;
     width: 100%;
 }
-#titulo{
+
+
+#titulo {
     color: white;
 }
+
+
+#minha_foto { 
+    padding-top: 5%;
+    width: 400px;
+}
+
 
