--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ body {
 }
 
 #minha_foto {
-  margin-top: 50px;
+  margin-top: 60px;
   width: 300px;
+  display: block;
 }
 
 #rodape {
   text-align: center;
+}
+
+#licoes_aprendidas, #licoes_a_aprender {
+  display: inline-block;
 }
