--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+* {
+  margin-top: 0;
+  margin-left: 0;
+}
+
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
+}
+
+main {
+  padding: 100px 30px;
+}
+
+#cabecalho {
+  position: fixed;
+  top: 0;
+  background-color: rgb(186, 194, 194);
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+}
+
+#minha_foto {
+  width: 200px;
 }
