--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
 body {
   background-color: rgb(253, 251, 251);
 }
+
+#cabecalho {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 125px;
+  width: 100%;
+  background-color: gold;
+}
+
+#titulo {
+  position: fixed;
+  top: 0;
+}
