--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background-color: rgb(253, 251, 251);
 }
 
-header {
-    margin-top: 0cm;
+#cabecalho {
+    position: fixed;
+    margin-top: 0;
 }
 
+#minha_foto {
+    width: 200px;
+}
