--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 html , body {
+  margin-top: 0;
   font-family: monospace;
   background-color: rgb(253, 251, 251);
 }
 
 #cabecalho {
+  position: fixed;
   height: 70px;
+  width: 100%;
   background-color: rgb(106, 253, 106);
   margin-top: 0;
   text-align: center;
@@ -15,7 +18,7 @@ html , body {
 }
 
 #minha_foto {
-  margin-top: 10px;
+  margin-top: 100px;
   width: 150px;
   border-radius: 2%;
 }
