--- a/style.css
+++ b/style.css
@@ -1,14 +1,9 @@
-body {
-    background-color: rgb(253, 251, 251);
-}
+body { background-color: rgb(253, 251, 251);}
 
 #cabecalho {
-    top: 0;
+    top: 0; 
     background-color: aquamarine;
     position: fixed;
-    padding: 20px;
-}
+    padding: 20px;}
 
-#minha_foto {
-    margin-top: 110px;
-}
+#minha_foto { margin-top: 110px;}
