--- a/style.css
+++ b/style.css
@@ -3,8 +3,11 @@ body {
 }
 #cabecalio {
   top: 0;
-
+  background-color: rgb(79, 55, 90);
+  color:rgb(190, 104, 240)
 }
-h1 {
+#licoes_aprendidas {
   color: black;
+  
+
 }
