--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
+  padding: 30px;
 }
 
 #minha_foto {
@@ -12,4 +13,6 @@ body {
   width: 130px;
   height: 150px;
 }
+
+
 
