--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+    padding: 0;
+}
 
 body {
     background-color: rgb(253, 251, 251);
@@ -6,14 +10,23 @@ body {
 #cabecalho {
     position: fixed;
     margin-top: 0;
+    background-color: #28a745;
+    color: #f5f5f5;
+    padding: 15px 30px;
+    display: inline-block;
+    text-align: center;
+    width: 100%;
 }
 
-#titulo {
-
+.margem {
+    padding: 30px 15px;
+    margin: 30px;
 }
 
 #minha_foto{
-
+  width: 300px;
+  height: 300px;
+  margin-top: 100px;
 }
 
 #licoes_aprendidas {
