--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
 body {
-    background-color: rgb(253, 251, 251);
+  background-color: rgb(253, 251, 251);
 }
 
 #cabecalho {
+  /* position: fixed;
+  height: 40px;
   top: 0;
   border: solid;
-  text-align: center;
+  text-align: center; */
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 40px;
+  margin: 20px;
 }
 
-#main_title {
+#titulo {
+  margin-top: 0;
   font-size: 30px;
   text-align: center;
 }
@@ -18,6 +28,7 @@ body {
   float: left;
   margin-right: 25px;
 }
+
 .main-text {
   font-size: 20px;
   display: inline-block;
@@ -25,6 +36,7 @@ body {
 }
 
 .main-article {
+  margin-top: 40px;
   margin-left: 20px;
   display: inline-block;
 }
