--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   font: 400 16px sans-serif;
 }
 
-h1 , h3 {
+h1 , h2 {
   font: 700 sans-serif;
 }
 
@@ -49,6 +49,10 @@ h1 , h3 {
 #licoes_a_aprender {
   float: right;
   width: 40%;
+}
+
+#rodape {
+  margin-top: 20px;
 }
 
 #rodape a {
