--- a/style.css
+++ b/style.css
@@ -1,9 +1,27 @@
 body{
-    background-color: rgb(253,251,251);
+  background-color: rgb(253,251,251);
 }
 
 #cabecalho{
     position: fixed;
     top: 0;
+    left: 0;
+    right:0;
+    background-color: rgb(83,162,127);
+    height: 200px;
+}
+
+#titulo{
+    color: whitesmoke;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    text-align: right;
+   
+}
+#minha_foto{
+    position: absolute;
+    width: 300px;
+    top: 90px;
+    left: 0px;
+    float: left;
 
 }
