--- a/style.css
+++ b/style.css
@@ -3,6 +3,20 @@ body {
 }
 
 header {
+ 
   position: fixed;
   top: 0;
+}
+
+header h1 {
+  text-align: center;
+  display: inline;
+}
+
+#minha_foto {  
+  width: 200px;
+}
+
+img#minha_foto {
+  padding: 100px 0;
 }
