--- a/style.css
+++ b/style.css
@@ -7,6 +7,12 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
+  height: 80px;
+  background-color: white;
+}
+
+main {
+  margin-top: 100px;
 }
 
 #minha_foto {
