--- a/style.css
+++ b/style.css
@@ -13,10 +13,20 @@ body {
 
 #titulo {
         color: white;
-}
+        text-align: center;
+    }
 
 
 #minha_foto {
         padding-top: 5%;
         width: 400px;
+}
+
+#rodape h2{
+    background-color: green;
+    width: 100%;
+    height: 70px;
+    text-align: center;
+    color: white;
+    line-height: 65px;
 }
