--- a/style.css
+++ b/style.css
@@ -15,13 +15,29 @@ header{
 #minha_foto{
     width: 300px;
     display: inline-block;
+    margin-left: auto;
+    margin-right: auto;
 }
 main{
     display: inline-block;
 }
+#aprendizado{
+    display: inline-block;
+    background-color: grey;  
+    border: 1px solid black;  
+    width: 600px;   
+}    
 #licoes_aprendidas{
-    display: inline-block;    
+    display: inline-block;
+    border: 1px solid black;
 }
 #licoes_a_aprender{
     display: inline-block;
+}
+aside{
+    display: inline-block;
+    background-color: grey;
+    border: 1px solid black;
+    width: 300px;
+    height: 350px;
 }
