--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
-body {background-color: rgb(253, 251, 251);}
+body { background-color: rgb(253, 251, 251);}
 
 #cabecalho {
-    top: 0; 
-    background-color: aquamarine;
-    position: fixed;
-    padding: 20px;}
+      top: 0; 
+      background-color: aquamarine;
+      position: fixed;
+      padding: 20px;
+}
 
-#minha_foto {margin-top: 110px;}
+#minha_foto { margin-top: 110px;}
