--- a/style.css
+++ b/style.css
@@ -10,14 +10,22 @@ body {
     height: 10%;   
 }
 
-h1 {
+#titulo{
     color: rgb(244, 241, 222);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #minha_foto {
     height: 500px;
     top: 100px;
+    position: static;
+    /* top: 60px; */
     display: block;
+    margin-top: auto;
+    border: 5px solid black;
+    margin-bottom: auto;
+    padding: 1%;
 }
 
 
@@ -28,8 +36,48 @@ h1 {
     width: 100%; 
     height: 5%;   
     color: rgb(244, 241, 222);
+    margin-bottom: auto;
 }
 
 #link-externo {
     color: rgb(244, 241, 222);
+}
+
+#tabela {
+    border: 1px solid black;
+    margin-bottom: auto;
+    position: static;
+    margin-top: auto;
+    ;
+}
+
+/* Para o espaçamento entre linhas utilizei como fonte o site:
+https://www.maujor.com/tutorial/propriedade-css-line-height.php */
+
+#licoes_aprendidas {
+    border: 5px solid black;
+    margin: 10px;
+    margin-top: auto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 30px;
+    
+}
+
+#licoes_a_aprender {
+    margin-top: auto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 
+    'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    line-height: 30px;
+}
+
+#artigo {
+    float: left;
+    border: 2px solid black;
+    width: 72%;
+}
+
+#lateral {
+    float: right;
+    width: 20%;
 }
