--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   background-color: rgb(253, 251, 251);
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.1;
 }
 
 #cabecalho ul {
@@ -8,6 +10,8 @@ body {
 
 #cabecalho h1 {
   text-align: center;
+  font-size: 38px;
+  color: rgb(0, 75, 0);
 }
 
 .tabela1 {
@@ -21,7 +25,7 @@ body {
   position: fixed;
   top: 0;
   width: 100%;
-  background-color: rgb(173, 231, 173);
+  background-color: rgb(180, 204, 180);
   border: 1px solid black;
 }
 
