--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ body {
   position: relative;
   color: white;
   text-align: center;
+  line-height: 60px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 35px;
 }
 
 main {
