--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   background-color: rgb(253, 251, 251);
 }
 
-header { 
+header {
   position: fixed;
   top: 0;
 }
@@ -12,10 +12,10 @@ header h1 {
   display: inline;
 }
 
-#minha_foto {  
+#minha_foto {
   width: 200px;
 }
 
 img#minha_foto {
-  padding: 100px 0 50px 0;
+  padding: 100px 0 50px;
 }
