--- a/style.css
+++ b/style.css
@@ -51,6 +51,25 @@ h1 , h2 {
   width: 40%;
 }
 
+.aprendizados {
+  margin-top: 10px;
+  height: 200px;
+}
+
+.lado-esquerdo {
+  float: left;
+  width: 40%;
+}
+
+.lado-direito {
+  float: right;
+  width: 40%;
+}
+
+.lado-direito h3 {
+  margin-bottom: 10px;
+}
+
 #rodape {
   margin-top: 20px;
 }
