--- a/style.css
+++ b/style.css
@@ -1,13 +1,8 @@
+body {
+  background-color: rgb(253, 251, 251);
+}
+
 #cabecalho {
-  position: fixed;
-  top: 0;
-  display: inline-block;
-}
-
-body {display: inline-block;
-  background-color: rgb(211, 207, 195);
-}
-
-#minha_foto {width: 200px;
-border-radius: 100%;
-display: inline-block;}
+    position: fixed;
+    top: 0;}
+    
