--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
-  margin-top: 0;
-  margin-left: 0;
+  margin: 0;
 }
 
 body {
@@ -33,6 +32,16 @@ main {
   display: inline-block;
 }
 
+#rodape {
+  background-color: rgb(186, 194, 194);
+  padding: 10px;
+}
+
 .list_title {
   margin-top: 20px;
+}
+
+.link_redes_sociais img {
+  width: 30px;
+  margin-left: 10px;
 }
