--- a/style.css
+++ b/style.css
@@ -10,16 +10,25 @@ body {
 
 #cabecalho {
   background-color: rgb(2, 43, 58);
+  color: white;
+  padding: 30px;
   position: fixed;
   top: 0;
   text-align: center;
   width: 100%;
 }
 
+img {
+  max-width: 500px;
+  margin-top: 150px;
+}
+
+nav ul li {
+  list-style-type: none;
+}
+
 #titulo {
   font-size: 34px;
-  color: white;
-  margin: 30px;
 }
 
 section {
