--- a/style.css
+++ b/style.css
@@ -1,14 +1,60 @@
 body {
     background-color: rgb(253, 251, 251);
     text-align: left;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 16px;
+    line-height: 20px;
+    color: darkblue;
+    margin-top: 150px;
 }
 
-header{
-    position:0px;
+#cabecalho{
+    position:fixed;
+    top: 0;
 }
 
 #minha_foto {
     display: block;
-    width: 300px;
+    width: 200px;
     border-radius: 100%;
 }
+
+#tabela_spec {
+    border: 1px solid black;
+    border-spacing: 0px;
+    margin-left: ;
+    margin-right: ;
+}
+
+#tabela_spec td {
+    border: 1px solid  black;
+    padding: 10px;
+}
+
+header, nav, img, article, section, ol, ul, aside, table, footer  {
+    margin: 10px;
+    padding: 30px;
+    border: 2px solid black;
+}
+
+#sobre {
+    background-color: coral;
+    width: 40%;
+}
+
+#listas {
+    background-color: coral;
+    width: 40% ;
+    margin-left: 650px;
+    margin-top: -430px;
+    }
+
+article {
+    background-color: rgb(80, 80, 179);
+}
+
+ol, ul {
+    background-color: rgb(109, 177, 63);
+}
+
+
