--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     background-color: rgb(253, 251, 251);
 }
 
-#cabeçalho {
+#cabecalho {
     position: fixed;
-    top: 0%;
+    top: 0;
     background-color: rgb(36, 147, 107)
 }
