--- a/style.css
+++ b/style.css
@@ -19,7 +19,14 @@ h2 {
   margin-left: 3%;
 }
 
-#licoes_aprendidas{
+#licoes_aprendidas {
   position: static;
-  margin: auto auto 3% 1%;
+  margin: auto auto 1% 1%;
+  width: 30%;
+}
+
+#licoes_a_aprender {
+  position: absolute;
+  left: 19%;
+  top: 91.1%;
 }
