--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 body {
   background-color: rgb(253, 251, 251);
 }
+
+#cabecalho {
+  background-color: aqua;
+  height: 60px;
+  left: 0;
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
