--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 #titulo {
         color: white;
         text-align: center;
-    }
+}
 
 
 #minha_foto {
@@ -22,11 +22,18 @@ body {
         width: 400px;
 }
 
-#rodape h2{
+#rodape h2 {
     background-color: green;
     width: 100%;
     height: 70px;
     text-align: center;
     color: white;
     line-height: 65px;
+}
+
+a {
+    font-size: 30px;
+    color: green;
+    text-decoration: underline;
+    line-height: 80px;
 }
