--- a/style.css
+++ b/style.css
@@ -3,32 +3,87 @@
     border: 0;
     padding: 0;
 }
+article{
+    border: 5px solid white;
+    border-style: dotted;
+    margin-left: 1%;
+    width: 45%;
+    display: inline-block;
+    background-color: cadetblue;
+    margin-bottom: 1%;
+}
+aside{
+    background-color: darkolivegreen;
+    border: 5px solid white;
+    
+    border-style: ridge;
+    display: inline-block;
+    float: right;
+    margin-bottom: 1%;
+    margin-right: 1%;
+    width: 45%;
+}
 body{
     background-color: rgb(253, 251, 251);
+    font-family: sans-serif;
+}
+h1{
+    font-size: 50px;
+}
+h3{
+    font-size: 35px;
+    line-height: 40px;
+}
+
+footer{
+    background-color: aquamarine;
+    border: 5px solid black;
+    height: auto;
+    text-align: center;
+    margin-top: 0.5%;
+    width: 99%;
 }
 header{
     background-color: green;
     border: 5px solid black;
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    height: 15%;
     position: fixed;
     text-align: center;
     top: 0;
     width: 99%;
-   
-    
 }
 main{
     background-color: green;
     width: 99%;
-    margin-top: 5%;
+    margin-top: 10%;
     border: 5px solid black;
 }
 #minha_foto{
-    width: 25%;
-    
-    border: 15px solid white;
+    width: 10%;
+    border: 15px solid rgb(20, 20, 20);
     border-radius: 15%;
-    margin: 15px;
+    margin: 1%;
+    float: left;
+    
+    
 }
-
+ol{
+    color: antiquewhite;
+    display: inline-block;
+    margin-left: 23.5%;
+    padding-bottom: 50px;
+    margin-top: 1%;
+    
+}
+p{
+    font-size: 25px;
+    margin: 2%;
+}
+ul{
+    color: antiquewhite;
+    display: inline-block;
+    margin-left: 30%;
+    margin-top: 1%;
+}
