--- a/style.css
+++ b/style.css
@@ -1,30 +1,34 @@
 body{
-    background-color: rgb(253, 251, 251);
+    background-color: rgb(253, 251, 251); 
 }
 
 #cabecalho{
-    position:fixed;
-    top: 0;
-}
-
-#titulo{
+    position: fixed;
+    top: 0px; 
 }
 
 #minha_foto{
-    width:  200px;
+    width: 200px;
     position: absolute;
-    top: 100px;
+    top: 100px; 
 }
+
 #licoes_aprendidas{
-    display: inline-block;
+    display: inline-block; 
 }
 
 #licoes_a_aprender{
-    display: inline-block;
+    display: inline-block; 
 }
 
 #section_list_1{
     position: absolute;
-    top: 300px;
+    top: 300px; 
 }
+
+#rodape{
+    position: absolute;
+    top: 570px;
+}
+
 
