--- a/style.css
+++ b/style.css
@@ -39,3 +39,40 @@ body {
 #main {
   margin-top: 12%;
 }
+
+.lado-esquerdo {
+  display: inline-block;
+  width: 300px;
+  height: 200px;
+  margin-left: 100px;
+}
+
+.lado-esquerdo p {
+    text-align: center;
+    border: 1px solid black;    
+}
+
+.aside {
+    display: inline-block;
+    width: 300px;
+    height: 200px;
+    margin-right: 100px;
+    float: right;
+}
+
+.aside p {
+    text-align: center;
+    border: 1px solid black;
+}
+#rodape {
+    margin-top: 40px;
+    text-align: center;
+    font-weight: bold;
+}
+
+#licoes_aprendidas {
+    display: inline-block;
+    width: 300px;
+    height: 200px;
+
+}
