--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 
 .word {
     color: goldenrod;
+    font-weight: bolder;
 }
 
 #cabecalho {
@@ -41,7 +42,37 @@ body {
 }
 
 #minha_foto {
-    margin: 80px 0px 0px 40px;
+    margin: 0px 0px 0px 40px;
     border-radius: 100%;
     width: 250px;
+}
+
+/*#licoes_aprendidas {
+    color: black;
+    font-weight: bolder;
+}*/
+
+.lista {
+    display: flex;
+    margin-top: 80px;
+    gap: 20px;
+}
+
+h2 {
+    color: black;
+    font-weight: bolder;
+}
+
+#article {
+    color: black;
+    font-weight: bolder;
+    line-height: 35px;
+}
+
+#aside {
+    font-size: 13px;
+    text-align: center;
+    color: black;
+    font-weight: bolder;
+    margin-top: 100px;
 }
