--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 
 body {
     background-color: rgb(253, 251, 251);
+    color: #3d495c;
+    font-family: monospace, courier;
+    line-height: 20px;
+    font-size: 20px;
 }
 
 #cabecalho {
@@ -29,14 +33,15 @@ body {
   margin-top: 100px;
 }
 
-#licoes_aprendidas {
-
+table {
+  text-align: justify;
+  padding: 15px 30px;
+  border: 2px solid #28a745;
+  line-height: 50px;
 }
 
-article {
-
+nav {
+    display: inline;
+    z-index: 3;
 }
 
-#rodape{
-
-}
